--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "concurrently": "^3.6.1",
+    "nodemon": "^1.18.4"
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "bcrypt-nodejs": "latest",
-    "body-parser": "~1.0.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
     "connect-flash": "~0.1.1",
-    "cookie-parser": "~1.0.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
-    "express-session": "~1.0.0",
-    "method-override": "~1.0.0",
+    "express-session": "^1.15.6",
+    "method-override": "^3.0.0",
     "moment-timezone": "^0.5.13",
     "mongoose": "^4.11.7",
     "morgan": "~1.0.0",
@@ -36,7 +36,8 @@
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
-    "react-infinite-scroller": "^1.0.15",
+    "react": "^16.5.2",
+    "react-infinite-scroller": "^1.2.1",
     "react-moment": "^0.6.5",
     "react-router-dom": "^4.1.2"
   }
