--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
     "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-infinite-scroller": "^1.2.1",
     "react-moment": "^0.6.5",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "react-scripts": "^1.1.5"
   }
 }
