--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "braces": "^3.0.0",
     "connect-flash": "~0.1.1",
     "cookie-parser": "^1.4.4",
     "cryptiles": "^4.1.3",
-    "eslint": "^6.0.1",
+    "eslint": "^5.0.0",
     "event-stream": "^4.0.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -50,12 +51,14 @@
     "passport-google-oauth": "~2.0.0",
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.4",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-infinite-scroller": "^1.2.4",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "typescript": "^3.5.2",
     "url-parse": "^1.4.7",
     "webpack-dev-server": "^3.7.2"
   }
